Agregando el link de mi perfil de github a la imagen que ya existía.

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <a href="https://instagram.com/percymeneses08" class="social-link instagram"></a>
             <a href="https://twitter.com/percymeneses08" class="social-link twitter"></a>
             <a href="https://linkedin.com/in/percymeneses08" class="social-link linkedin"></a>
-            <a href="" class="social-link github"></a>
+            <a href="https://github.com/percymeneses08" class="social-link github"></a>
           </div>
       </div> 
     </section>
