mejorando el texto del botón

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <p class="event-description">GDG DevFest Lima es un evento organizado por el GDG Open. 
                   Este 2018 reunieron a los mejores en Internet Of Things (IOT), Artificial Intelligence (AI) 
                   y Cyber Security; en dos días llenos de sesiones, talleres y exhibiciones.</p>
-                <a class="event-url" href="https://www.youtube.com/watch?v=TAS1Cl2WfOc" target="_blank">De qué se trata</a>
+                <a class="event-url" href="https://www.youtube.com/watch?v=TAS1Cl2WfOc" target="_blank">De qué trata</a>
               </div>
           </article>
           <!-- Esto de abajo es para aumentar más eventos a las que iremos luego. -->
