estable haibendo agregado los certificados

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
             <a class="link" href="#eventos">Experiencia</a>
           </li>
           <li>
+            <a class="link" href="#certificados">Certificados</a>
+          </li>
+          <li>
             <a class="link contact-me" href="#contacto">Contáctame</a>
           </li>
         </ol>
@@ -32,95 +35,142 @@
     </header>
     <section class="hero">
       <div class="container">
-          <h1>¡Hola! soy <strong>Percy Meneses</strong>,<br/>estudiante de <strong>Platzi</strong> con<br/>pasión de nunca parar de <strong>aprender.</strong></h1>
-          <img class="hero-image" src="images/portada.jpg" alt="foto de portada" width="400"/>
+          <h1>
+            ¡Hola!, soy <strong>Percy Meneses</strong>,<br/>desarrollador 
+            <strong>Front-end</strong><br/>apasionado por el<br/>aprendizaje
+            <strong> eterno.</strong>
+          </h1>
+          <img class="hero-image" src="images/portada.jpg" alt="foto de portada" width="548"/>
       </div>
     </section>
-    <section id="portafolio" class="portfolio">
+    <section class="portfolio" id="portafolio">
       <div class="container">
         <h2>Portafolio (Proyectos Destacados)</h2>
         <article class="project">
-          <div class="proyect-details">
-          <h3 class="proyect-title">El peso en otros lugares</h3>
-          <h6 class="proyect-course">Html / Js / CSS</h6>
-          <p class="proyect-date"><small><strong>Fecha:</strong> 10/06/17</small></p>
-          <p class="proyect-url"><small><strong>Puedes verlo en:</strong> ...</small></p>
-          <p class="proyect-description">Esta página fue el resultado de un mes de arduo trabajo 
+          <div class="project-details">
+          <h3 class="project-title">El peso en otros lugares</h3>
+          <h6 class="project-course">Html / Js / CSS</h6>
+          <p class="project-date"><small><strong>Fecha:</strong> 10/06/17</small></p>
+          <p class="project-url"><small><strong>Puedes verlo en:</strong> ...</small></p>
+          <p class="project-description">Esta página fue el resultado de un mes de arduo trabajo 
             grupal, para luego presentarlo en la feria de ciencias de la I.E.E."Alfonso Ugarte". 
             Logrando así conseguir el primer puesto de nuestra categoría.</p>
           </div>
-          <figure class="proyect-image-container">
-          <img class="proyect-image" src="images/proyectoCTA.png" width="475" alt="captura de pantalla de mi proyecto de CTA"/>
+          <figure class="project-image-container">
+            <img class="project-image" src="images/proyectoCTA.png" width="475" alt="captura de pantalla de mi proyecto de CTA"/>
           </figure>
         </article>
         <article class="project">
-            <div class="proyect-details">
-            <h3 class="proyect-title">El peso en otros lugares</h3>
-            <h6 class="proyect-course">Html / Js / CSS</h6>
-            <p class="proyect-date"><small><strong>Fecha:</strong> 10/06/17</small></p>
-            <p class="proyect-url"><small><strong>Puedes verlo en:</strong> ...</small></p>
-            <p class="proyect-description">Esta página fue el resultado de un mes de arduo trabajo 
+            <div class="project-details">
+            <h3 class="project-title">El peso en otros lugares</h3>
+            <h6 class="project-course">Html / Js / CSS</h6>
+            <p class="project-date"><small><strong>Fecha:</strong> 10/06/17</small></p>
+            <p class="project-url"><small><strong>Puedes verlo en:</strong> ...</small></p>
+            <p class="project-description">Esta página fue el resultado de un mes de arduo trabajo 
               grupal, para luego presentarlo en la feria de ciencias de la I.E.E."Alfonso Ugarte". 
               Logrando así conseguir el primer puesto de nuestra categoría.</p>
             </div>
-            <figure class="proyect-image-container">
-            <img class="proyect-image" src="images/proyectoCTA.png" width="475" alt="captura de pantalla de mi proyecto de CTA"/>
+            <figure class="project-image-container">
+              <img class="project-image" src="images/proyectoCTA.png" width="475" alt="captura de pantalla de mi proyecto de CTA"/>
             </figure>
-          </article>
+        </article>
       </div>
     </section>
+    <section id="eventos"> <!-- Esta sección se ha creado 
+      para que al hacer click en la sección experiencia, nos pueda 
+      llevar a dicha sección pero sin que el título quede demasiado
+      pegado al margen. Esto porque el título queda fuera de la
+      clase "event-list", en el cual están toda la información 
+      dividida correctamente. --> </section>
     <div class="container">
       <h2 class="event-list-title">Más sobre mi experiencia</h2>
     </div>
-    <section id="eventos" class="event-list">
+    <section class="event-list">
       <div class="container">
-          <article class="event">
-              <figure class="event-image-container">
-                <img class="event-image" src="images/io-extended.jpg" width="500" alt="foto de la i/o extended 2018"/>
-              </figure>
-              <div class="event-detail">
-                <h3 class="event-title">Google I/O Extended 2018</h3>
-                <p class="event-description">El evento I/O Extended ayuda a los desarrolladores que se 
-                  encuentran alrededor del mundo a formar parte de la experiencia I/O.</p>
-                <a class="event-url" href="https://www.youtube.com/watch?v=PXyH0X_YLo0" target="_blank">Años anteriores</a>
-              </div>
-          </article>
-          <article class="event">
-              <figure class="event-image-container">
-                <img class="event-image" src="images/dev-fest-18.jpg" width="500" alt="foto de la i/o extended 2018"/>
-              </figure>
-              <div class="event-detail">
-                <h3 class="event-title">Dev-fest Lima 18</h3>
-                <p class="event-description">GDG DevFest Lima es un evento organizado por el GDG Open. 
-                  Este 2018 reunieron a los mejores en Internet Of Things (IOT), Artificial Intelligence (AI) 
-                  y Cyber Security; en dos días llenos de sesiones, talleres y exhibiciones.</p>
-                <a class="event-url" href="https://www.youtube.com/watch?v=TAS1Cl2WfOc" target="_blank">De qué trata</a>
-              </div>
-          </article>
-          <!-- Esto de abajo es para aumentar más eventos a las que iremos luego. -->
-          <!-- <article class="event">
-              <figure class="event-image-container">
-                <img class="event-image" src="images/io-extended.jpg" width="500" alt="foto de la i/o extended 2018"/>
-              </figure>
-              <div class="event-detail">
-                <h3 class="event-title">Google I/O Extended 2018</h3>
-                <p class="event-description">Escribir de qué se trata</p>
-                <a class="event-url" href="https://www.youtube.com/watch?v=PXyH0X_YLo0" target="blank">Ver plática</a>
-              </div>
-          </article>
-          <article class="event">
-              <figure class="event-image-container">
-                <img class="event-image" src="images/io-extended.jpg" width="500" alt="foto de la i/o extended 2018"/>
-              </figure>
-              <div class="event-detail">
-                <h3 class="event-title">Google I/O Extended 2018</h3>
-                <p class="event-description">Escribir de qué se trata</p>
-                <a class="event-url" href="https://www.youtube.com/watch?v=PXyH0X_YLo0" target="blank">Ver plática</a>
-              </div>
-          </article> -->
+        <article class="event">
+          <figure class="event-image-container">
+            <img src="images/io-extended.jpg" alt="foto de la i/o extended 2018"/>
+          </figure>
+          <div class="event-detail">
+            <h3 class="event-title">Google I/O Extended 2018</h3>
+            <p class="event-description">El evento I/O Extended ayuda a los desarrolladores que se 
+              encuentran alrededor del mundo a formar parte de la experiencia I/O.</p>
+            <a class="event-url" href="https://www.youtube.com/watch?v=PXyH0X_YLo0" target="_blank">Años anteriores</a>
+          </div>
+        </article>
+        <article class="event">
+          <figure class="event-image-container">
+            <img class="event-image" src="images/dev-fest-18.jpg" width="500" alt="foto de la i/o extended 2018"/>
+          </figure>
+          <div class="event-detail">
+            <h3 class="event-title">Dev-fest Lima 18</h3>
+            <p class="event-description">
+              GDG DevFest Lima es un evento organizado por el GDG Open. 
+              Este 2018 reunieron a los mejores en Internet Of Things (IOT), Artificial Intelligence (AI) 
+              y Cyber Security; en dos días llenos de sesiones, talleres y exhibiciones.
+            </p>
+            <a class="event-url" href="https://www.youtube.com/watch?v=TAS1Cl2WfOc" target="_blank">De qué trata</a>
+          </div>
+        </article>
+        <!-- Esto de abajo es para aumentar más eventos a las que iremos luego. -->
+        <!-- 
+        <article class="event">
+          <figure class="event-image-container">
+            <img class="event-image" src="images/io-extended.jpg" width="500" alt="foto de la i/o extended 2018"/>
+          </figure>
+          <div class="event-detail">
+            <h3 class="event-title">Google I/O Extended 2018</h3>
+            <p class="event-description">Escribir de qué se trata</p>
+            <a class="event-url" href="https://www.youtube.com/watch?v=PXyH0X_YLo0" target="blank">Ver plática</a>
+          </div>
+        </article>
+        <article class="event">
+          <figure class="event-image-container">
+            <img class="event-image" src="images/io-extended.jpg" width="500" alt="foto de la i/o extended 2018"/>
+          </figure>
+          <div class="event-detail">
+            <h3 class="event-title">Google I/O Extended 2018</h3>
+            <p class="event-description">Escribir de qué se trata</p>
+            <a class="event-url" href="https://www.youtube.com/watch?v=PXyH0X_YLo0" target="blank">Ver plática</a>
+          </div>
+        </article> -->
       </div>
     </section>
-    <section id="contacto" class="contact">
+    <section id="certificados"> <!-- Esta sección se ha creado 
+      para que al hacer click en la sección experiencia, nos pueda 
+      llevar a dicha sección pero sin que el título quede demasiado
+      pegado al margen. Esto porque el título queda fuera de la
+      clase "event-list", en el cual están toda la información 
+      dividida correctamente. --> </section>
+    <section class="container">
+      <h2>Certificados (Actualizados)</h2>
+    </section>
+    <section class="certificates">
+      <div class="diplomas">
+          <figure class="certificates-image">
+            <img src="images/certificates/devfest-2018.jpg" alt="devfest-2018"/>
+          </figure>
+          <figure class="certificates-image">
+            <img src="images/certificates/github.jpg" alt="github.jpg"/>
+          </figure>
+          <figure class="certificates-image">
+            <img src="images/certificates/desarrollo-web-online.jpg" alt="desarrollo-web-online.jpg"/>
+          </figure>
+          <figure class="certificates-image">
+            <img src="images/certificates/inteligencia-artificial-ibm-watson.jpg" alt="inteligencia-artificial-ibm-watson.jpg"/>
+          </figure>
+          <figure class="certificates-image">
+            <img src="images/certificates/fundamentos-ibm-cloud.jpg" alt="fundamentos-ibm-cloud.jpg"/>
+          </figure>
+          <figure class="certificates-image">
+            <img src="images/certificates/marca-personal.jpg" alt="marca-personal.jpg"/>
+          </figure>
+          <figure class="certificates-image">
+            <img src="images/certificates/programacion-basica.jpg" alt="programacion-basica"/>
+          </figure>
+      </div>
+    </section>
+    <section class="contact" id="contacto">
       <div class="container">
           <form action="/suscripcion/" class="form-email">
             <h3>Contáctame</h3>
@@ -138,12 +188,12 @@
     </section>
     <footer class="footer">
       <div class="container">
-          <div>
-              <p>Curso de desarrollo web online 2018 <img src="images/platzi.png" width="50" alt="platzi"></p>
-            </div>
-            <div>
-              <p>Based on <a href="https://twitter.com/thespianartist" target="_blank">@terspieanartist</a>'s design</p>
-            </div>
+        <div>
+          <p>Curso de desarrollo web online 2018 <img src="images/platzi.png" width="50" alt="platzi"></p>
+        </div>
+        <div>
+          <p>Based on <a href="https://twitter.com/thespianartist" target="_blank">@terspieanartist</a>'s design</p>
+        </div>
       </div>
     </footer>
   </body>
