Versión estable con las certificaciones añadidas y algunas mejoras menores

--- a/index.html
+++ b/index.html
@@ -136,16 +136,10 @@
         </article> -->
       </div>
     </section>
-    <section id="certificados"> <!-- Esta sección se ha creado 
-      para que al hacer click en la sección experiencia, nos pueda 
-      llevar a dicha sección pero sin que el título quede demasiado
-      pegado al margen. Esto porque el título queda fuera de la
-      clase "event-list", en el cual están toda la información 
-      dividida correctamente. --> </section>
-    <section class="container">
-      <h2>Certificados (Actualizados)</h2>
-    </section>
-    <section class="certificates">
+    <section class="certificates" id="certificados">
+      <section class="container certificates-title">
+        <h2>Certificados (Actualizados)</h2>
+      </section>
       <div class="diplomas">
           <figure class="certificates-image">
             <img src="images/certificates/devfest-2018.jpg" alt="devfest-2018"/>
