Agregando la página de instagram

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <h3 class="project-title">El peso en otros lugares</h3>
           <h6 class="project-course">Html / Js / CSS</h6>
           <p class="project-date"><small><strong>Fecha:</strong> 10/06/17</small></p>
-          <p class="project-url"><small><strong>Puedes verlo en:</strong> ...</small></p>
+          <p class="project-url"><small><strong>Puedes verlo en: </strong><a href="instagram-index.html">instagram</a></small></p>
           <p class="project-description">Esta página fue el resultado de un mes de arduo trabajo 
             grupal, para luego presentarlo en la feria de ciencias de la I.E.E."Alfonso Ugarte". 
             Logrando así conseguir el primer puesto de nuestra categoría.</p>
@@ -186,7 +186,7 @@
           <p>Curso de desarrollo web online 2018 <img src="images/platzi.png" width="50" alt="platzi"></p>
         </div>
         <div>
-          <p>Based on <a href="https://twitter.com/thespianartist" target="_blank">@terspieanartist</a>'s design</p>
+          <p>Based on <a href= "https://twitter.com/thespianartist" target="_blank">@terspieanartist</a>'s design</p>
         </div>
       </div>
     </footer>
