--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="utf-8"/>
       <title>Percy Meneses Luyo</title>
-      <link rel="icon" type="image/png" href="images/favicon.png"/>
+      <link rel="icon" type="image/png" href="images/portfolio-images/favicon.png"/>
       <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro" rel="stylesheet">
-      <link rel="stylesheet" href="css/styles.css"/>
+      <link rel="stylesheet" href="css/portfolio-styles.css"/>
   </head>
   <body>
     <header class="header">
       <div class="container">
         <figure class="logo">
-        <img src="images/nombre.png" height="50" alt="Logo de mi nombre completo"/>
+        <img src="images/portfolio-images/nombre.png" height="50" alt="Logo de mi nombre completo"/>
        </figure>
         <nav class="menu">
         <!-- esta etiqueta de abajo es para tener una lista ordenada -->
@@ -40,7 +40,7 @@
             <strong>Front-end</strong><br/>apasionado por el<br/>aprendizaje
             <strong> eterno.</strong>
           </h1>
-          <img class="hero-image" src="images/portada.jpg" alt="foto de portada" width="548"/>
+          <img class="hero-image" src="images/portfolio-images/portada.jpg" alt="foto de portada" width="548"/>
       </div>
     </section>
     <section class="portfolio" id="portafolio">
@@ -48,16 +48,29 @@
         <h2>Portafolio (Proyectos Destacados)</h2>
         <article class="project">
           <div class="project-details">
-          <h3 class="project-title">El peso en otros lugares</h3>
-          <h6 class="project-course">Html / Js / CSS</h6>
-          <p class="project-date"><small><strong>Fecha:</strong> 10/06/17</small></p>
-          <p class="project-url"><small><strong>Puedes verlo en: </strong><a href="instagram-index.html">instagram</a></small></p>
-          <p class="project-description">Esta página fue el resultado de un mes de arduo trabajo 
-            grupal, para luego presentarlo en la feria de ciencias de la I.E.E."Alfonso Ugarte". 
-            Logrando así conseguir el primer puesto de nuestra categoría.</p>
+          <h3 class="project-title">Instagram (layout)</h3>
+          <h6 class="project-course">Html / CSS</h6>
+          <p class="project-date"><small><strong>Fecha:</strong> 01/15/19</small></p>
+          <p class="project-url"><small><strong>Puedes verlo en: </strong><a href="instagram-index.html">www.percymeneses08.com/instagram-index.html</a></small></p>
+          <p class="project-description">Realicé este proyecto para plasmar mis conocimientos adquiridos en CSS Grid y aprender sobre Responsive Design. 
+            Lo más complicado fue entender la sintaxis para aplicar este último en el proyecto. Sin embargo, una vez lo entiendes, luego se te vuelve más fácil.</p>
           </div>
           <figure class="project-image-container">
-            <img class="project-image" src="images/proyectoCTA.png" width="475" alt="captura de pantalla de mi proyecto de CTA"/>
+            <img class="project-image" src="images/instagram-images/instagram-page.jpg" width="475" alt="captura de pantalla de mi proyecto de CTA"/>
+          </figure>
+        </article>
+        <article class="project">
+          <div class="project-details">
+          <h3 class="project-title">Pinterest (layout)</h3>
+          <h6 class="project-course">Html / CSS</h6>
+          <p class="project-date"><small><strong>Fecha:</strong> 01/23/19</small></p>
+          <p class="project-url"><small><strong>Puedes verlo en: </strong><a href="pinterest-index.html">www.percymeneses08.com/pinterest-index.html</a></small></p>
+          <p class="project-description">Este proyecto fue para llevar al siguiente nivel mis conocimientos adquiridos sobre CSS Grid.
+            Me costó mucho trabajo hacer que se vean ordenadas las imágenes pues, estas no tenían el mismo tamaño entre ellas como en el proyecto de Instagram.
+          </p>
+          </div>
+          <figure class="project-image-container">
+            <img class="project-image" src="images/pinterest-images/pinterest-page.jpg" width="475" alt="captura de pantalla de mi proyecto de CTA"/>
           </figure>
         </article>
         <article class="project">
@@ -71,7 +84,7 @@
               Logrando así conseguir el primer puesto de nuestra categoría.</p>
             </div>
             <figure class="project-image-container">
-              <img class="project-image" src="images/proyectoCTA.png" width="475" alt="captura de pantalla de mi proyecto de CTA"/>
+              <img class="project-image" src="images/portfolio-images/proyectoCTA.png" width="475" alt="captura de pantalla de mi proyecto de CTA"/>
             </figure>
         </article>
       </div>
@@ -89,7 +102,7 @@
       <div class="container">
         <article class="event">
           <figure class="event-image-container">
-            <img src="images/io-extended.jpg" alt="foto de la i/o extended 2018"/>
+            <img src="images/portfolio-images/io-extended.jpg" alt="foto de la i/o extended 2018"/>
           </figure>
           <div class="event-detail">
             <h3 class="event-title">Google I/O Extended 2018</h3>
@@ -100,7 +113,7 @@
         </article>
         <article class="event">
           <figure class="event-image-container">
-            <img class="event-image" src="images/dev-fest-18.jpg" width="500" alt="foto de la i/o extended 2018"/>
+            <img class="event-image" src="images/portfolio-images/dev-fest-18.jpg" width="500" alt="foto de la i/o extended 2018"/>
           </figure>
           <div class="event-detail">
             <h3 class="event-title">Dev-fest Lima 18</h3>
@@ -142,25 +155,25 @@
       </section>
       <div class="diplomas">
           <figure class="certificates-image">
-            <img src="images/certificates/devfest-2018.jpg" alt="devfest-2018"/>
+            <img src="images/portfolio-images/certificates/devfest-2018.jpg" alt="devfest-2018"/>
           </figure>
           <figure class="certificates-image">
-            <img src="images/certificates/github.jpg" alt="github.jpg"/>
+            <img src="images/portfolio-images/certificates/github.jpg" alt="github.jpg"/>
           </figure>
           <figure class="certificates-image">
-            <img src="images/certificates/desarrollo-web-online.jpg" alt="desarrollo-web-online.jpg"/>
+            <img src="images/portfolio-images/certificates/desarrollo-web-online.jpg" alt="desarrollo-web-online.jpg"/>
           </figure>
           <figure class="certificates-image">
-            <img src="images/certificates/inteligencia-artificial-ibm-watson.jpg" alt="inteligencia-artificial-ibm-watson.jpg"/>
+            <img src="images/portfolio-images/certificates/inteligencia-artificial-ibm-watson.jpg" alt="inteligencia-artificial-ibm-watson.jpg"/>
           </figure>
           <figure class="certificates-image">
-            <img src="images/certificates/fundamentos-ibm-cloud.jpg" alt="fundamentos-ibm-cloud.jpg"/>
+            <img src="images/portfolio-images/certificates/fundamentos-ibm-cloud.jpg" alt="fundamentos-ibm-cloud.jpg"/>
           </figure>
           <figure class="certificates-image">
-            <img src="images/certificates/marca-personal.jpg" alt="marca-personal.jpg"/>
+            <img src="images/portfolio-images/certificates/marca-personal.jpg" alt="marca-personal.jpg"/>
           </figure>
           <figure class="certificates-image">
-            <img src="images/certificates/programacion-basica.jpg" alt="programacion-basica"/>
+            <img src="images/portfolio-images/certificates/programacion-basica.jpg" alt="programacion-basica"/>
           </figure>
       </div>
     </section>
@@ -174,7 +187,7 @@
           <div class="social">
             <a href="https://facebook.com/percymeneses08" class="social-link facebook"></a>
             <a href="https://instagram.com/percymeneses08" class="social-link instagram"></a>
-            <a href="https://twitter.com/percymeneses08" class="social-link twitter"></a>
+            <!-- <a href="https://twitter.com/percymeneses08" class="social-link twitter"></a> -->
             <a href="https://linkedin.com/in/percymeneses08" class="social-link linkedin"></a>
             <a href="https://github.com/percymeneses08" class="social-link github"></a>
           </div>
@@ -183,7 +196,7 @@
     <footer class="footer">
       <div class="container">
         <div>
-          <p>Curso de desarrollo web online 2018 <img src="images/platzi.png" width="50" alt="platzi"></p>
+          <p>Curso de desarrollo web online 2018 <img src="images/portfolio-images/platzi.png" width="50" alt="platzi"></p>
         </div>
         <div>
           <p>Based on <a href= "https://twitter.com/thespianartist" target="_blank">@terspieanartist</a>'s design</p>
