Subiendo el proyecto de Movi.es

--- a/index.html
+++ b/index.html
@@ -48,10 +48,24 @@
         <h2>Portafolio (Proyectos Destacados)</h2>
         <article class="project">
           <div class="project-details">
+          <h3 class="project-title">Movie.es</h3>
+          <h6 class="project-course">Html / CSS / Js</h6>
+          <p class="project-date"><small><strong>Fecha:</strong> 27/02/19</small></p>
+          <p class="project-url"><small><strong>Puedes verlo en: </strong><a href="html/theater-index.html">www.percymeneses08.com/theater-index.html</a></small></p>
+          <p class="project-description">En este proyecto puse a prueba todos mis conocimientos adquiridos previamente. 
+            Esta vez se me hizo más fácil, no me demoré demasiado, en especial, con el maquetado que realicé con ayuda de
+            CSS Grid, y el Responsive Design.</p>
+          </div>
+          <figure class="project-image-container">
+            <img class="project-image" src="images/theater-images/proyectoTheater.png" width="475" alt="captura de pantalla de mi proyecto de CTA"/>
+          </figure>
+        </article>
+        <article class="project">
+          <div class="project-details">
           <h3 class="project-title">Instagram (layout)</h3>
           <h6 class="project-course">Html / CSS</h6>
           <p class="project-date"><small><strong>Fecha:</strong> 01/15/19</small></p>
-          <p class="project-url"><small><strong>Puedes verlo en: </strong><a href="instagram-index.html">www.percymeneses08.com/instagram-index.html</a></small></p>
+          <p class="project-url"><small><strong>Puedes verlo en: </strong><a href="html/instagram-index.html">www.percymeneses08.com/instagram-index.html</a></small></p>
           <p class="project-description">Realicé este proyecto para plasmar mis conocimientos adquiridos en CSS Grid y aprender sobre Responsive Design. 
             Lo más complicado fue entender la sintaxis para aplicar este último en el proyecto. Sin embargo, una vez lo entiendes, luego se te vuelve más fácil.</p>
           </div>
@@ -64,7 +78,7 @@
           <h3 class="project-title">Pinterest (layout)</h3>
           <h6 class="project-course">Html / CSS</h6>
           <p class="project-date"><small><strong>Fecha:</strong> 01/23/19</small></p>
-          <p class="project-url"><small><strong>Puedes verlo en: </strong><a href="pinterest-index.html">www.percymeneses08.com/pinterest-index.html</a></small></p>
+          <p class="project-url"><small><strong>Puedes verlo en: </strong><a href="html/pinterest-index.html">www.percymeneses08.com/pinterest-index.html</a></small></p>
           <p class="project-description">Este proyecto fue para llevar al siguiente nivel mis conocimientos adquiridos sobre CSS Grid.
             Me costó mucho trabajo hacer que se vean ordenadas las imágenes pues, estas no tenían el mismo tamaño entre ellas como en el proyecto de Instagram.
           </p>
@@ -74,18 +88,18 @@
           </figure>
         </article>
         <article class="project">
-            <div class="project-details">
-            <h3 class="project-title">El peso en otros lugares</h3>
-            <h6 class="project-course">Html / Js / CSS</h6>
-            <p class="project-date"><small><strong>Fecha:</strong> 10/06/17</small></p>
-            <p class="project-url"><small><strong>Puedes verlo en:</strong> ...</small></p>
-            <p class="project-description">Esta página fue el resultado de un mes de arduo trabajo 
-              grupal, para luego presentarlo en la feria de ciencias de la I.E.E."Alfonso Ugarte". 
-              Logrando así conseguir el primer puesto de nuestra categoría.</p>
-            </div>
-            <figure class="project-image-container">
-              <img class="project-image" src="images/portfolio-images/proyectoCTA.png" width="475" alt="captura de pantalla de mi proyecto de CTA"/>
-            </figure>
+          <div class="project-details">
+          <h3 class="project-title">El peso en otros lugares</h3>
+          <h6 class="project-course">Html / Js / CSS</h6>
+          <p class="project-date"><small><strong>Fecha:</strong> 10/06/17</small></p>
+          <p class="project-url"><small><strong>Puedes verlo en:</strong> Arreglando errores. Disponible muy pronto</small></p>
+          <p class="project-description">Esta página fue el resultado de un mes de arduo trabajo 
+            grupal, para luego presentarlo en la feria de ciencias de la I.E.E."Alfonso Ugarte". 
+            Logrando así conseguir el primer puesto de nuestra categoría.</p>
+          </div>
+          <figure class="project-image-container">
+            <img class="project-image" src="images/portfolio-images/proyectoCTA.png" width="475" alt="captura de pantalla de mi proyecto de CTA"/>
+          </figure>
         </article>
       </div>
     </section>
@@ -125,7 +139,7 @@
             <a class="event-url" href="https://www.youtube.com/watch?v=TAS1Cl2WfOc" target="_blank">De qué trata</a>
           </div>
         </article>
-        <!-- Esto de abajo es para aumentar más eventos a las que iremos luego. -->
+        <!-- Esto de abajo es para aumentar más eventos. -->
         <!-- 
         <article class="event">
           <figure class="event-image-container">
