[La mejor fase beta que se puede tener]

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <h3 class="project-title">PlatziVideo</h3>
           <h6 class="project-course">HTML / CSS / JS</h6>
           <p class="project-date"><small><strong>Fecha:</strong> 17/05/19</small></p>
-          <p class="project-url"><small><strong>Puedes verlo en: </strong><a href="html/platzi-video-index.html">www.percymeneses08.com/html/platzi-video-index.html</a></small></p>
+          <p class="project-url"><small><strong>Míralo clickeando en el siguiente enlace: </strong><a href="html/platzi-video-index.html">www.percymeneses08.com/html/platzi-video-index.html</a></small></p>
           <p class="project-description">En este proyecto puse todos mis conocimientos hasta la fecha en práctica. Lo que más se me complicó fue querer agregar cosas
             de los cuales no tenía ni idea de cómo funcionaba, pero investigando pude crear una solución.</p>
           </div>
@@ -68,7 +68,7 @@
           <h3 class="project-title">Movie.es</h3>
           <h6 class="project-course">HTML / CSS / JS</h6>
           <p class="project-date"><small><strong>Fecha:</strong> 27/02/19</small></p>
-          <p class="project-url"><small><strong>Puedes verlo en: </strong><a href="html/theater-index.html">www.percymeneses08.com/html/theater-index.html</a></small></p>
+          <p class="project-url"><small><strong>Míralo clickeando en el siguiente enlace: </strong><a href="html/theater-index.html">www.percymeneses08.com/html/theater-index.html</a></small></p>
           <p class="project-description">En este proyecto puse a prueba todos mis conocimientos adquiridos previamente. 
             Esta vez se me hizo más fácil, no me demoré demasiado, en especial, con el maquetado que realicé con ayuda de
             CSS Grid, y el Responsive Design.</p>
@@ -95,7 +95,7 @@
           <h3 class="project-title">Pinterest (layout)</h3>
           <h6 class="project-course">Html / CSS</h6>
           <p class="project-date"><small><strong>Fecha:</strong> 01/23/19</small></p>
-          <p class="project-url"><small><strong>Puedes verlo en: </strong><a href="html/pinterest-index.html">www.percymeneses08.com/html/pinterest-index.html</a></small></p>
+          <p class="project-url"><small><strong>Míralo clickeando en el siguiente enlace: </strong><a href="html/pinterest-index.html">www.percymeneses08.com/html/pinterest-index.html</a></small></p>
           <p class="project-description">Este proyecto fue para llevar al siguiente nivel mis conocimientos adquiridos sobre CSS Grid.
             Me costó mucho trabajo hacer que se vean ordenadas las imágenes pues, estas no tenían el mismo tamaño entre ellas como en el proyecto de Instagram.
           </p>
@@ -109,7 +109,7 @@
           <h3 class="project-title">El peso en otros lugares</h3>
           <h6 class="project-course">Html / Js / CSS</h6>
           <p class="project-date"><small><strong>Fecha:</strong> 10/06/17</small></p>
-          <p class="project-url"><small><strong>Puedes verlo en:</strong> Arreglando errores. Disponible muy pronto</small></p>
+          <p class="project-url"><small><strong>Míralo clickeando en el siguiente enlace:</strong> Arreglando errores. Disponible muy pronto</small></p>
           <p class="project-description">Esta página fue el resultado de un mes de arduo trabajo 
             grupal, para luego presentarlo en la feria de ciencias de la I.E.E."Alfonso Ugarte". 
             Logrando así conseguir el primer puesto de nuestra categoría.</p>
